# POETRY-GPT

./: README.md  lamilaz_tokenizer_latest.json  model.py  model_notebook.ipynb  parse_fr_in_dataset.ipynb  pyproject.toml  tokenizer.json  tokenizer_no_special_char.json  train_tokenizer.py
