[project]
name = "poetry-gpt"
version = "0.1.0"
description = ""
authors = [
    {name = "DyPaMaJo"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"

dependencies = [
    "numpy (>=2.3.5,<3.0.0)",
    "torch (>=2.9.1,<3.0.0)",
    "datasets (>=4.4.1,<5.0.0)",
    "tokenizers (>=0.22.1,<0.23.0)",
    "wandb (>=0.23.1,<0.24.0)",
    "pandas (>=2.3.3,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
